# cmake-example

./: CMakeLists.txt  README.md
maths/include/: maths.h
maths/src/: CMakeLists.txt  maths.cpp
test/include/: test_cabecera.h
test/src/: CMakeLists.txt  main.cpp  test_cabecera.cpp
